[JSC] Fix staturated conversion and compare64 https://bugs.webkit.org/show_bug.cgi?id=252623 rdar://105699589

Reviewed by Michael Saboff.

1. We should not allocate new scratch registers inside truncInBounds for x64 since they can be the same to resultLocation / operationLocation's FPRs.
   And in that case, this does not work. Let's just pass already allocated FPRs.
2. We fix emitCompareI64. After `ImmHelpers::immLocation(lhsLocation, rhsLocation) = Location::fromGPR(m_scratchGPR);`, `ImmHelpers::immLocation(lhsLocation, rhsLocation)` can always return lhsLocation,
   since both locations are no longer imm.

* Source/JavaScriptCore/wasm/WasmBBQJIT.cpp:
(JSC::Wasm::BBQJIT::truncInBounds):
(JSC::Wasm::BBQJIT::truncTrapping):
(JSC::Wasm::BBQJIT::truncSaturated):
(JSC::Wasm::BBQJIT::emitCompareI64):

Canonical link: https://commits.webkit.org/260581@main